--- a/LesPages/Formation.html
+++ b/LesPages/Formation.html
@@ -21,16 +21,16 @@
     </header>
 
     <nav>
-        <a href="PageD'accueil.html">Accueil</a>
-        <a href="Parcours.html">Parcours</a>
-        <a href="Competence.html">Compétences </a>
-        <a href="Stages.html">Stages</a>
-        <a href="Formation.html">Formations</a>
-        <a href="Matiere.html">Matières</a>
-        <a href="Passions.html">Passions</a>
-        <a href="Quiz.html">Quizz</a>
-        <a href="Contact.html">Contact</a>
-        <a href="Temoignage.html">Témoignage</a>
+      <a href="/PageD'accueil.html">Accueil</a>
+      <a href="Parcours.html">Parcours</a>
+      <a href="Competence.html">Compétences </a>
+      <a href="Stages.html">Stages</a>
+      <a href="Formation.html">Formations</a>
+      <a href="Matiere.html">Matières</a>
+      <a href="Passions.html">Passions</a>
+      <a href="Quiz.html">Quizz</a>
+      <a href="Contact.html">Contact</a>
+      <a href="Temoignage.html">Témoignage</a>
     </nav>
 
 
