--- a/PageD'accueil.html
+++ b/PageD'accueil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Votre Site Web</title>
 </head>
 <body>
@@ -14,15 +14,15 @@
 
     <nav>
         <a href="PageD'accueil.html">Accueil</a>
-        <a href="Parcours.html">Parcours</a>
-        <a href="Competence.html">Compétences </a>
-        <a href="Stages.html">Stages</a>
-        <a href="Formation.html">Formations</a>
-        <a href="Matiere.html">Matières</a>
-        <a href="Passions.html">Passions</a>
-        <a href="Quiz.html">Quizz</a>
-        <a href="Contact.html">Contact</a>
-        <a href="Temoignage.html">Témoignage</a>
+        <a href="LesPages/Parcours.html">Parcours</a>
+        <a href="LesPages/Competence.html">Compétences </a>
+        <a href="LesPages/Stages.html">Stages</a>
+        <a href="LesPages/Formation.html">Formations</a>
+        <a href="LesPages/Matiere.html">Matières</a>
+        <a href="LesPages/Passions.html">Passions</a>
+        <a href="LesPages/Quiz.html">Quizz</a>
+        <a href="LesPages/Contact.html">Contact</a>
+        <a href="LesPages/Temoignage.html">Témoignage</a>
     </nav>
 
 
@@ -56,16 +56,16 @@
                     les bases de données et les concepts informatiques. Mon enthousiasme pour l'apprentissage et ma volonté constante de relever de nouveaux défis m'ont permis de m'immerger pleinement dans les cours et les projets pratiques.
                 </p>
             </div>
-            <img src="../LesImages/PHOTOyes (2).png" alt="Photo" width="200" height="200">
+            <img src="LesImages/PHOTOyes (2).png" alt="Photo" width="200" height="200">
         </div>
    
 <br>
 <br>
 <br>
         <div class="social-icons">
-            <a href= "https://www.facebook.com/yesmine.bouattour.79" target="_blank"> <img src="../LesImages/Facebook.png" alt="Facebook"width="60" height="60"></a>
-            <a href="https://github.com/yesminebouattour" target="_blank"><img src="../LesImages/Github.png" alt="Github" width="60" height="60"></a>
-            <a href="https://www.linkedin.com/in/yesmine-bouattour-6b881a233/" target="_blank"><img src="../LesImages/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
+            <a href= "https://www.facebook.com/yesmine.bouattour.79" target="_blank"> <img src="LesImages/Facebook.png" alt="Facebook"width="60" height="60"></a>
+            <a href="https://github.com/yesminebouattour" target="_blank"><img src="LesImages/Github.png" alt="Github" width="60" height="60"></a>
+            <a href="https://www.linkedin.com/in/yesmine-bouattour-6b881a233/" target="_blank"><img src="LesImages/linkedin.png" alt="LinkedIn" width="60" height="60"></a>
         </div>
     </section>
 
