--- a/LesPages/Temoignage.html
+++ b/LesPages/Temoignage.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="PageD'accueil.html">Accueil</a>
+        <a href="/PageD'accueil.html">Accueil</a>
         <a href="Parcours.html">Parcours</a>
         <a href="Competence.html">Compétences </a>
         <a href="Stages.html">Stages</a>
