--- a/LesPages/Stages.html
+++ b/LesPages/Stages.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="/PageD'accueil.html">Accueil</a>
+        <a href="/index.html">Accueil</a>
         <a href="Parcours.html">Parcours</a>
         <a href="Competence.html">Compétences </a>
         <a href="Stages.html">Stages</a>
